--- a/apps/react-rtq/src/styles.css
+++ b/apps/react-rtq/src/styles.css
@@ -1,1 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+    max-width: 800px;
+    margin: auto;
+    font-size: 2rem;
+}
+
+input,
+button {
+    font-size: 2rem;
+}
+
+.todos {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    row-gap: 0.5rem;
+}
+.todos input {
+    padding-top: 0.5rem;
+}
+.todos input[type='checkbox'] {
+    zoom: 2;
+}
+.todos button {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.add {
+    display: flex;
+    flex-direction: row;
+    margin-top: 1rem;
+}
+.add input {
+    width: 100%;
+    margin-right: 1rem;
+}
+.add button {
+    min-width: 20%;
+    background-color: blue;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
